java/parsing-java/src/main/java/compliance/parser/antlr/graphql/gen/GraphQLParser.java
// Generated from ../java/input/GraphQL.g4 by ANTLR 4.13.2
package compliance.parser.antlr.graphql.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class GraphQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		NAME=53, STRING=54, BLOCK_STRING=55, ID=56, FLOAT=57, INT=58, PUNCTUATOR=59, 
		WS=60, COMMA=61, LineComment=62, UNICODE_BOM=63, UTF8_BOM=64, UTF16_BOM=65, 
		UTF32_BOM=66;
	public static final int
		RULE_document = 0, RULE_definition = 1, RULE_executableDocument = 2, RULE_executableDefinition = 3, 
		RULE_operationDefinition = 4, RULE_operationType = 5, RULE_selectionSet = 6, 
		RULE_selection = 7, RULE_field = 8, RULE_arguments = 9, RULE_argument = 10, 
		RULE_alias = 11, RULE_fragmentSpread = 12, RULE_fragmentDefinition = 13, 
		RULE_fragmentName = 14, RULE_typeCondition = 15, RULE_inlineFragment = 16, 
		RULE_value = 17, RULE_intValue = 18, RULE_floatValue = 19, RULE_booleanValue = 20, 
		RULE_stringValue = 21, RULE_nullValue = 22, RULE_enumValue = 23, RULE_listValue = 24, 
		RULE_objectValue = 25, RULE_objectField = 26, RULE_variable = 27, RULE_variableDefinitions = 28, 
		RULE_variableDefinition = 29, RULE_defaultValue = 30, RULE_type_ = 31, 
		RULE_namedType = 32, RULE_listType = 33, RULE_directives = 34, RULE_directive = 35, 
		RULE_typeSystemDocument = 36, RULE_typeSystemDefinition = 37, RULE_typeSystemExtensionDocument = 38, 
		RULE_typeSystemExtension = 39, RULE_schemaDefinition = 40, RULE_rootOperationTypeDefinition = 41, 
		RULE_schemaExtension = 42, RULE_description = 43, RULE_typeDefinition = 44, 
		RULE_typeExtension = 45, RULE_scalarTypeDefinition = 46, RULE_scalarTypeExtension = 47, 
		RULE_objectTypeDefinition = 48, RULE_implementsInterfaces = 49, RULE_fieldsDefinition = 50, 
		RULE_fieldDefinition = 51, RULE_argumentsDefinition = 52, RULE_inputValueDefinition = 53, 
		RULE_objectTypeExtension = 54, RULE_interfaceTypeDefinition = 55, RULE_interfaceTypeExtension = 56, 
		RULE_unionTypeDefinition = 57, RULE_unionMemberTypes = 58, RULE_unionTypeExtension = 59, 
		RULE_enumTypeDefinition = 60, RULE_enumValuesDefinition = 61, RULE_enumValueDefinition = 62, 
		RULE_enumTypeExtension = 63, RULE_inputObjectTypeDefinition = 64, RULE_inputFieldsDefinition = 65, 
		RULE_inputObjectTypeExtension = 66, RULE_directiveDefinition = 67, RULE_directiveLocations = 68, 
		RULE_directiveLocation = 69, RULE_executableDirectiveLocation = 70, RULE_typeSystemDirectiveLocation = 71, 
		RULE_name = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "definition", "executableDocument", "executableDefinition", 
			"operationDefinition", "operationType", "selectionSet", "selection", 
			"field", "arguments", "argument", "alias", "fragmentSpread", "fragmentDefinition", 
			"fragmentName", "typeCondition", "inlineFragment", "value", "intValue", 
			"floatValue", "booleanValue", "stringValue", "nullValue", "enumValue", 
			"listValue", "objectValue", "objectField", "variable", "variableDefinitions", 
			"variableDefinition", "defaultValue", "type_", "namedType", "listType", 
			"directives", "directive", "typeSystemDocument", "typeSystemDefinition", 
			"typeSystemExtensionDocument", "typeSystemExtension", "schemaDefinition", 
			"rootOperationTypeDefinition", "schemaExtension", "description", "typeDefinition", 
			"typeExtension", "scalarTypeDefinition", "scalarTypeExtension", "objectTypeDefinition", 
			"implementsInterfaces", "fieldsDefinition", "fieldDefinition", "argumentsDefinition", 
			"inputValueDefinition", "objectTypeExtension", "interfaceTypeDefinition", 
			"interfaceTypeExtension", "unionTypeDefinition", "unionMemberTypes", 
			"unionTypeExtension", "enumTypeDefinition", "enumValuesDefinition", "enumValueDefinition", 
			"enumTypeExtension", "inputObjectTypeDefinition", "inputFieldsDefinition", 
			"inputObjectTypeExtension", "directiveDefinition", "directiveLocations", 
			"directiveLocation", "executableDirectiveLocation", "typeSystemDirectiveLocation", 
			"name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'query'", "'mutation'", "'subscription'", "'{'", "'}'", "'('", 
			"')'", "':'", "'...'", "'fragment'", "'on'", "'true'", "'false'", "'null'", 
			"'['", "']'", "'$'", "'='", "'!'", "'@'", "'schema'", "'extend'", "'scalar'", 
			"'type'", "'implements'", "'&'", "'interface'", "'union'", "'|'", "'enum'", 
			"'input'", "'directive'", "'repeatable'", "'QUERY'", "'MUTATION'", "'SUBSCRIPTION'", 
			"'FIELD'", "'FRAGMENT_DEFINITION'", "'FRAGMENT_SPREAD'", "'INLINE_FRAGMENT'", 
			"'VARIABLE_DEFINITION'", "'SCHEMA'", "'SCALAR'", "'OBJECT'", "'FIELD_DEFINITION'", 
			"'ARGUMENT_DEFINITION'", "'INTERFACE'", "'UNION'", "'ENUM'", "'ENUM_VALUE'", 
			"'INPUT_OBJECT'", "'INPUT_FIELD_DEFINITION'", null, null, null, null, 
			null, null, null, null, "','", null, null, "'\\uEFBBBF'", "'\\uFEFF'", 
			"'\\u0000FEFF'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "NAME", "STRING", "BLOCK_STRING", "ID", 
			"FLOAT", "INT", "PUNCTUATOR", "WS", "COMMA", "LineComment", "UNICODE_BOM", 
			"UTF8_BOM", "UTF16_BOM", "UTF32_BOM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GraphQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GraphQLParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphQLVisitor ) return ((GraphQLVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				definition();
				}
				}
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 54043203478750238L) != 0) );
			setState(151);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public ExecutableDocumentContext executableDocument() {
			return getRuleContext(ExecutableDocumentContext.class,0);
		}
		public TypeSystemDocumentContext typeSystemDocument() {
			return getRuleContext(TypeSystemDocumentContext.class,0);
		}
		public TypeSystemExtensionDocumentContext typeSystemExtensionDocument() {
			return getRuleContext(TypeSystemExtensionDocumentContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphQLVisitor ) return ((GraphQLVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				executableDocument();
				}
				break;
			case T__20:
			case T__22:
			case T__23:
			case T__26:
			case T__27:
			case T__29:
			case T__30:
			case T__31:
			case STRING:
			case BLOCK_STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				typeSystemDocument();
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 3);
				{
				setState(155);
				typeSystemExtensionDocument();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExecutableDocumentContext extends ParserRuleContext {
		public List<ExecutableDefinitionContext> executableDefinition() {
			return getRuleContexts(ExecutableDefinitionContext.class);
		}
		public ExecutableDefinitionContext executableDefinition(int i) {
			return getRuleContext(ExecutableDefinitionContext.class,i);
		}
		public ExecutableDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_executableDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterExecutableDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitExecutableDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphQLVisitor ) return ((GraphQLVisitor<? extends T>)visitor).visitExecutableDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExecutableDocumentContext executableDocument() throws RecognitionException {
		ExecutableDocumentContext _localctx = new ExecutableDocumentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_executableDocument);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(159); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(158);
					executableDefinition();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(161); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExecutableDefinitionContext extends ParserRuleContext {
		public OperationDefinitionContext operationDefinition() {
			return getRuleContext(OperationDefinitionContext.class,0);
		}
		public FragmentDefinitionContext fragmentDefinition() {
			return getRuleContext(FragmentDefinitionContext.class,0);
		}
		public ExecutableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_executableDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterExecutableDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitExecutableDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphQLVisitor ) return ((GraphQLVisitor<? extends T>)visitor).visitExecutableDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExecutableDefinitionContext executableDefinition() throws RecognitionException {
		ExecutableDefinitionContext _localctx = new ExecutableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_executableDefinition);
		try {
			setState(165);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				operationDefinition();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(164);
				fragmentDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperationDefinitionContext extends ParserRuleContext {
		public OperationTypeContext operationType() {
			return getRuleContext(OperationTypeContext.class,0);
		}
		public SelectionSetContext selectionSet() {
			return getRuleContext(SelectionSetContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public VariableDefinitionsContext variableDefinitions() {
			return getRuleContext(VariableDefinitionsContext.class,0);
		}
		public DirectivesContext directives() {
			return getRuleContext(DirectivesContext.class,0);
		}
		public OperationDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operationDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).enterOperationDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphQLListener ) ((GraphQLListener)listener).exitOperationDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphQLVisitor ) return ((GraphQLVisitor<? extends T>)visitor).visitOperationDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationDefinitionContext operationDefinition() throws RecognitionException {
		OperationDefinitionContext _localctx = new OperationDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operationDefinition);
		int _la;
		try {
			setState(180);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				operationType();
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NAME) {
					{
					setState(168);
					name();
					}
				}

				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(171);
					variableDefinitions();
					}
				}

				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__19) {
					{
					setState(174);
					directives();
					}
				}

				setState(177);
				selectionSet();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(179);
				selectionSet();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
